// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu with search inside items but no search results 1`] = `
<ul
  className="list false"
>
  <div
    className="searchBox"
  >
    <form
      action=""
      className="ais-SearchBox-form"
      noValidate={true}
      onReset={[Function]}
      onSubmit={[Function]}
      role="search"
    >
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        autoFocus={false}
        className="ais-SearchBox-input"
        maxLength="512"
        onChange={[Function]}
        placeholder="Search here…"
        required={true}
        spellCheck="false"
        type="search"
        value=""
      />
      <button
        className="ais-SearchBox-submit"
        style={
          Object {
            "display": "block",
          }
        }
        title="Submit your search query."
        type="submit"
      >
        <svg
          height="1em"
          role="img"
          width="1em"
        >
          <use
            xlinkHref="#sbx-icon-search-13"
          />
        </svg>
      </button>
      <button
        className="ais-SearchBox-reset"
        onClick={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        title="Clear the search query."
        type="reset"
      >
        <svg
          height="1em"
          role="img"
          width="1em"
        >
          <use
            xlinkHref="#sbx-icon-clear-3"
          />
        </svg>
      </button>
    </form>
  </div>
  <li
    className="item item--selected  "
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      <span
        className="label"
      >
        white
      </span>
       
      <span
        className="count"
      >
        10
      </span>
    </a>
  </li>
  <li
    className="item false  "
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      <span
        className="label"
      >
        black
      </span>
       
      <span
        className="count"
      >
        20
      </span>
    </a>
  </li>
  <li
    className="item false  "
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      <span
        className="label"
      >
        blue
      </span>
       
      <span
        className="count"
      >
        30
      </span>
    </a>
  </li>
</ul>
`;

exports[`Menu Menu with search inside items with search results 1`] = `
<ul
  className="list false"
>
  <div
    className="searchBox"
  >
    <form
      action=""
      className="ais-SearchBox-form"
      noValidate={true}
      onReset={[Function]}
      onSubmit={[Function]}
      role="search"
    >
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        autoFocus={false}
        className="ais-SearchBox-input"
        maxLength="512"
        onChange={[Function]}
        placeholder="Search here…"
        required={true}
        spellCheck="false"
        type="search"
        value=""
      />
      <button
        className="ais-SearchBox-submit"
        style={
          Object {
            "display": "block",
          }
        }
        title="Submit your search query."
        type="submit"
      >
        <svg
          height="1em"
          role="img"
          width="1em"
        >
          <use
            xlinkHref="#sbx-icon-search-13"
          />
        </svg>
      </button>
      <button
        className="ais-SearchBox-reset"
        onClick={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        title="Clear the search query."
        type="reset"
      >
        <svg
          height="1em"
          role="img"
          width="1em"
        >
          <use
            xlinkHref="#sbx-icon-clear-3"
          />
        </svg>
      </button>
    </form>
  </div>
  <li
    className="item item--selected  "
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      <span
        className="label"
      />
       
      <span
        className="count"
      >
        10
      </span>
    </a>
  </li>
</ul>
`;

exports[`Menu applies translations 1`] = `
<ul
  className="list false"
>
  <div
    className="searchBox"
  >
    <form
      action=""
      className="ais-SearchBox-form"
      noValidate={true}
      onReset={[Function]}
      onSubmit={[Function]}
      role="search"
    >
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        autoFocus={false}
        className="ais-SearchBox-input"
        maxLength="512"
        onChange={[Function]}
        placeholder="placeholder"
        required={true}
        spellCheck="false"
        type="search"
        value=""
      />
      <button
        className="ais-SearchBox-submit"
        style={
          Object {
            "display": "block",
          }
        }
        title="Submit your search query."
        type="submit"
      >
        <svg
          height="1em"
          role="img"
          width="1em"
        >
          <use
            xlinkHref="#sbx-icon-search-13"
          />
        </svg>
      </button>
      <button
        className="ais-SearchBox-reset"
        onClick={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        title="Clear the search query."
        type="reset"
      >
        <svg
          height="1em"
          role="img"
          width="1em"
        >
          <use
            xlinkHref="#sbx-icon-clear-3"
          />
        </svg>
      </button>
    </form>
  </div>
  <li
    className="item false  "
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      <span
        className="label"
      >
        white
      </span>
       
      <span
        className="count"
      >
        10
      </span>
    </a>
  </li>
  <li
    className="item false  "
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      <span
        className="label"
      >
        black
      </span>
       
      <span
        className="count"
      >
        20
      </span>
    </a>
  </li>
  <button
    className="showMore false"
    disabled={false}
    onClick={[Function]}
  >
     display more
  </button>
</ul>
`;

exports[`Menu default menu 1`] = `
<ul
  className="list false"
>
  <li
    className="item false  "
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      <span
        className="label"
      >
        white
      </span>
       
      <span
        className="count"
      >
        10
      </span>
    </a>
  </li>
  <li
    className="item false  "
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      <span
        className="label"
      >
        black
      </span>
       
      <span
        className="count"
      >
        20
      </span>
    </a>
  </li>
  <button
    className="showMore false"
    disabled={false}
    onClick={[Function]}
  >
    Show more
  </button>
</ul>
`;
